@@ -44,6 +44,7 @@ public class CompactionTask extends AbstractCompactionTask
     protected String compactionFileLocation;
     protected final int gcBefore;
     protected boolean isUserDefined;
+    protected OperationType compactionType;
     protected static long totalBytesCompacted = 0;
 
     public CompactionTask(ColumnFamilyStore cfs, Collection<SSTableReader> sstables, final int gcBefore)
@@ -52,6 +53,7 @@ public class CompactionTask extends AbstractCompactionTask
         compactionFileLocation = null;
         this.gcBefore = gcBefore;
         this.isUserDefined = false;
+        this.compactionType = OperationType.COMPACTION;
     }
 
     public static synchronized long addToTotalBytesCompacted(long bytesCompacted)
@@ -122,8 +124,8 @@ public class CompactionTask extends AbstractCompactionTask
             logger.debug("Expected bloom filter size : " + keysPerSSTable);
 
         AbstractCompactionIterable ci = DatabaseDescriptor.isMultithreadedCompaction()
-                                      ? new ParallelCompactionIterable(OperationType.COMPACTION, toCompact, controller)
-                                      : new CompactionIterable(OperationType.COMPACTION, toCompact, controller);
+                                      ? new ParallelCompactionIterable(compactionType, toCompact, controller)
+                                      : new CompactionIterable(compactionType, toCompact, controller);
         CloseableIterator<AbstractCompactedRow> iter = ci.iterator();
         Iterator<AbstractCompactedRow> nni = Iterators.filter(iter, Predicates.notNull());
         Map<DecoratedKey, Long> cachedKeys = new HashMap<DecoratedKey, Long>();
@@ -144,7 +146,7 @@ public class CompactionTask extends AbstractCompactionTask
                 // don't mark compacted in the finally block, since if there _is_ nondeleted data,
                 // we need to sync it (via closeAndOpen) first, so there is no period during which
                 // a crash could cause data loss.
-                cfs.markCompacted(toCompact);
+                cfs.markCompacted(toCompact, compactionType);
                 return 0;
             }
 
@@ -197,7 +199,7 @@ public class CompactionTask extends AbstractCompactionTask
                 collector.finishCompaction(ci);
         }
 
-        cfs.replaceCompactedSSTables(toCompact, sstables);
+        cfs.replaceCompactedSSTables(toCompact, sstables, compactionType);
         // TODO: this doesn't belong here, it should be part of the reader to load when the tracker is wired up
         for (Entry<SSTableReader, Map<DecoratedKey, Long>> ssTableReaderMapEntry : cachedKeyMap.entrySet())
         {
@@ -268,6 +270,12 @@ public class CompactionTask extends AbstractCompactionTask
     public CompactionTask isUserDefined(boolean isUserDefined)
     {
         this.isUserDefined = isUserDefined;
+        return this;
+    }
+
+    public CompactionTask setCompactionType(OperationType compactionType)
+    {
+        this.compactionType = compactionType;
         return this;
     }
 }
