@@ -25,13 +25,18 @@ import org.apache.cassandra.io.sstable.SSTableReader;
 
 import java.util.List;
 
+import org.apache.cassandra.db.compaction.OperationType;
+
 public class SSTableListChangedNotification implements INotification
 {
-    public Iterable<SSTableReader> removed;
-    public Iterable<SSTableReader> added;
-    public SSTableListChangedNotification(Iterable<SSTableReader> added, Iterable<SSTableReader> removed)
+    public final Iterable<SSTableReader> removed;
+    public final Iterable<SSTableReader> added;
+    public final OperationType compactionType;
+
+    public SSTableListChangedNotification(Iterable<SSTableReader> added, Iterable<SSTableReader> removed, OperationType compactionType)
     {
         this.removed = removed;
         this.added = added;
+        this.compactionType = compactionType;
     }
 }
